solved the stagger bug and solved the overlay bug. updated the clippath for better browser compatibility.

--- a/src/index.css
+++ b/src/index.css
@@ -155,7 +155,7 @@ body {
 }
 
 @utility clip-path {
-  clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0 100%);
+  clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
 }
 
  {
